k8s-first-project/first-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: first-app-service
            port:
              number: 8000
